--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valere",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nehasharma123456.github.io",
+  "homepage": "https://nehasharma123456.github.io/",
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.25",
     "@rooks/use-window-size": "^4.11.2",
@@ -12,6 +12,7 @@
     "json-server": "^0.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-owl-carousel": "^2.3.3",
     "react-particle-image": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
